...
    accounts: accounts,
    categories: categories,
    accountId: accountId ? Id.valid(accountId) : undefined,
  });

  return (
    <AppScreen testID="purchase-screen">
      <PurchaseFormProvider initialValue={initialData} validate={validatePurchaseForm} validateOnChange>
        <PurchaseForm accounts={accounts!} categories={categories!} tags={tags!} />
      </PurchaseFormProvider>
      <AppErrorSheet {...errors} />
    </AppScreen>
  );
...
