...
          <NativeTabs.Trigger.Label>{t(tk.tabs.dashboard)}</NativeTabs.Trigger.Label>
        </NativeTabs.Trigger>
        <NativeTabs.Trigger name="statistics" testID="tabs-statistics">
          <NativeTabs.Trigger.Icon sf={AppIconMap.insights.ios} />
          <NativeTabs.Trigger.Label>{t(tk.tabs.insights)}</NativeTabs.Trigger.Label>
        </NativeTabs.Trigger>
        <NativeTabs.Trigger name="settings" testID="tabs-settings">
          <NativeTabs.Trigger.Icon sf={AppIconMap.settings.ios} />
          <NativeTabs.Trigger.Label>{t(tk.tabs.settings)}</NativeTabs.Trigger.Label>
        </NativeTabs.Trigger>
      </NativeTabs>
    </>
  );
...
